<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/ticTacToeB"
            android:text="@string/TicTacToe"
            style="@style/NavigationButton"
            android:onClick="handleTicTacToeButtonClick" />

        <Button
            android:id="@+id/wordleB"
            android:text="@string/wordle"
            style="@style/NavigationButton"
            android:onClick="handleWordleButtonClick" />

        <Button
            android:id="@+id/colorPuzzleB"
            android:text="@string/color_puzzle"
            style="@style/NavigationButton"
            android:onClick="handleColorPuzzleButtonClick" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/select_game"
        android:textSize="30sp"
        android:textColor="@color/beige"
        android:textAppearance="@style/default_font"/>

    <include layout="@layout/navigation_layout"/>

</RelativeLayout>